crates/overdrive-core/tests/compile_fail/workflow_status_vs_terminal_condition.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/workflow_status_vs_terminal_condition.rs:28:29
   |
28 |     expects_workflow_status(condition);
   |     ----------------------- ^^^^^^^^^ expected `WorkflowStatus`, found `TerminalCondition`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> tests/compile_fail/workflow_status_vs_terminal_condition.rs:21:4
   |
21 | fn expects_workflow_status(_status: WorkflowStatus) {}
   |    ^^^^^^^^^^^^^^^^^^^^^^^ -----------------------

error[E0308]: mismatched types
  --> tests/compile_fail/workflow_status_vs_terminal_condition.rs:34:32
   |
34 |     expects_terminal_condition(status);
   |     -------------------------- ^^^^^^ expected `TerminalCondition`, found `WorkflowStatus`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> tests/compile_fail/workflow_status_vs_terminal_condition.rs:23:4
   |
23 | fn expects_terminal_condition(_condition: TerminalCondition) {}
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^ -----------------------------
